--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,29 +1,26 @@
-<!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN" "http://java.sun.com/dtd/web-app_2_3.dtd">
-
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
-  <servlet>
-    <servlet-name>CartServlet</servlet-name>
-    <servlet-class>murach.cart.CartServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>ProductsServlet</servlet-name>
-    <servlet-class>murach.cart.ProductsServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>CartServlet</servlet-name>
-    <url-pattern>/cart</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>ProductsServlet</servlet-name>
-    <url-pattern>/loadProducts</url-pattern>
-  </servlet-mapping>
-  <session-config>
-    <session-timeout>
-        30
-    </session-timeout>
-  </session-config>
-  <welcome-file-list>
-    <welcome-file>loadProducts</welcome-file>
-  </welcome-file-list>
+	<display-name>Shopping cart JPA - Hibernate</display-name>
+	<servlet>
+		<servlet-name>HomeController</servlet-name>
+		<display-name>HomeController</display-name>
+		<description></description>
+		<servlet-class>murach.controller.HomeController</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>CartController</servlet-name>
+		<display-name>CartController</display-name>
+		<description></description>
+		<servlet-class>murach.controller.CartController</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>HomeController</servlet-name>
+		<url-pattern></url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>CartController</servlet-name>
+		<url-pattern>/CartController</url-pattern>
+	</servlet-mapping>
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
 </web-app>
